tests/Types/fail/non-string-value.ts
import { route } from "@ninots/routing";

route("users.show", { id: 123 });
